# hybrid-robot-navigation

./: .env.example  .gitattributes  .gitignore  LICENSE  Makefile  README.md  epuck_control.py  pyproject.toml
results/: maze_1_differential_wavefront_path.json  maze_1_holonomic_roadmap_path.json  maze_1_holonomic_wavefront_path.json  maze_2_differential_wavefront_path.json
scenes/: maze_1.ttt  maze_2.ttt
src/: config.py  main.py
src/algorithms/: __init__.py  base.py  dwa.py  potential_fields.py  ppo.py  roadmap.py  rrt.py  wavefront.py
src/core/: __init__.py  geometry.py  session.py
src/envs/: epuck_nav_v0.py
src/robots/: __init__.py  diffdrive.py  epuck.py  factory.py
src/robots/base/: __init__.py  actuator.py  controller.py  navigator.py
src/robots/differential/: __init__.py  actuator.py  config.py  controller.py  kinematics.py  navigator.py
src/robots/holonomic/: __init__.py  actuator.py  config.py  controller.py  kinematics.py  navigator.py
src/scripts/: drive_epuck.py
src/services/: coppelia.py
src/utils/: __init__.py  conversions.py  geometry.py  helpers.py  logger.py  map.py  metrics.py  paths.py  plotting.py  session.py
