[project]
name = "hybrid-robot-navigation"
version = "0.0.1"
description = "Implementation and comparison of classical, reactive, and deep reinforcement learning (DRL) planners for mobile robot navigation in dynamic environments using CoppeliaSim. Provides a lightweight hybrid strategy combining the strengths of both paradigms and a reproducible benchmark for evaluating safety, efficiency, and smoothness."
authors = [
    {name = "Bruno Lemos de Lima", email = "bruno.lemos@dcc.ufmg.br"},
    {name = "Rodrigo Santos da Silva", email = "rodrigo.silva@dcc.ufmg.br"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "coppeliasim-zmqremoteapi-client (>=2.0.4,<3.0.0)",
    "pyzmq (>=27.1.0,<28.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "numpy (<2.0.0)",
    "scipy == 1.16.2",
    "colorlog>=6.9.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.13.0"

[tool.poetry]
package-mode = false
